idea/testData/multiplatform/extensionOnExpect/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in JVM'")!>E<!> {
    fun <!LINE_MARKER("descr='Has actuals in JVM'")!>commonMember<!>()
}